# cloud-signal-engine

./: .gitignore  LICENSE  Makefile  README.md  RELEASE_NOTES.md  add_test_data.py  backend_test_failures.txt  full_backend_tests_output.txt  pyproject.toml  setup.py  test_api_output.txt  test_data.py  test_ingest_debug.py  test_norm_output.txt  test_rules_output.txt
.github/workflows/: ci.yml
alerts/: suspicious_api_key_alert.json
backend/: __init__.py  capture_error.py  check_db.py  debug_ingest.py  error.txt  errors.txt  errors_backend.txt  insert_test_data_direct.py  pytest_output.txt  pytest_output_2.txt  read_log.py
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: alerts.py  detections.py  ingest.py
backend/app/services/: detection_engine.py  normalizer.py
backend/app/services/rules/: __init__.py  api_abuse.py  base.py  brute_force.py  impossible_travel.py  password_spray.py  privilege_escalation.py  suspicious_api_key.py  suspicious_user_agent.py
backend/tests/: conftest.py  test_api.py  test_normalizer.py  test_rules.py
docs/: architecture.md  demo_scenarios.md  detection_rules.md  threat_model.md
examples/generators/: generate_demo_logs.py
examples/sample_logs/: .gitkeep
frontend/: .eslintignore  errors_frontend.txt  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/alerts/[id]/: page.tsx
frontend/components/: alert-card.tsx  evidence-viewer.tsx  severity-badge.tsx  status-badge.tsx  triage-panel.tsx
frontend/types/: index.ts
